--- a/coast.html
+++ b/coast.html
@@ -9,14 +9,20 @@
 </head>
 <body>
     <h1>Dublin, a coastal city</h1>
-    <ul>
-        <li>
-            <a href="index.html">city</a>
-        </li>
-
-        <li>
-            <a href="coast.html"> coast </a>
-        </li>
-    </ul>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">city</a>
+            </li>
+            <li>
+                <a href="coast.html"> coast </a>
+            </li>
+        </ul>
+    </nav>
+        <section>
+            <figure>
+                <img src="assets/images/beach.jpg" alt="an image of coastal Dublin" 
+            </figure>
+        </section>
 </body>
 </html>
